--- a/connect4_main.css
+++ b/connect4_main.css
@@ -1,10 +1,27 @@
+.welcome {
+    display: flex;
+    justify-content: center;
+}
+
+.header {
+    flex-wrap: wrap;
+    text-align: center;
+}
+
 #container {
     display: flex;
     justify-content: space-around;
+    margin-top: 50px;
   }
 
 .col {
     border: solid lightgray 1px;
     color: transparent;
     border-radius: 50px
+}
+
+#reset-button {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
 }
