--- a/connect4_main.css
+++ b/connect4_main.css
@@ -1,3 +1,4 @@
+
 .welcome {
     display: flex;
     justify-content: center;
@@ -20,8 +21,13 @@
     border-radius: 50px
 }
 
-#reset-button {
+.button {
     display: flex;
     justify-content: center;
+}
+
+#reset-button {
+    flex-wrap: wrap;
+    text-align: center;
     margin-top: 50px;
 }
