--- a/connect4_main.css
+++ b/connect4_main.css
@@ -16,7 +16,7 @@
     align-self: center;
 }
 
-.slot {
+.column {
     background-color: white;
     border: solid 1px lightslategrey;
     width: 90px;
