back to original starter code

--- a/connect4_main.css
+++ b/connect4_main.css
@@ -16,7 +16,7 @@
     align-self: center;
 }
 
-.column {
+.col {
     background-color: white;
     border: solid 1px lightslategrey;
     width: 90px;
@@ -28,4 +28,8 @@
     display: flex;
     justify-content: center;
     margin-top: 1rem;
+}
+
+#reset-button {
+    font-size: 200%;
 }
