--- a/connect4_main.css
+++ b/connect4_main.css
@@ -3,13 +3,13 @@
 }
 
 .grid {
-    background-color: lightskyblue;
+    background-color: blue;
     width: 700px;
     height: 500px;
     justify-content: center;
-    border: cadetblue 1px solid;
+    border: black 1px solid;
     margin: auto;
-    padding: 10px
+    padding: 30px
 }
 
 .row {
@@ -18,11 +18,11 @@
 
 .col {
     background-color: white;
-    border: solid 1px lightslategrey;
-    width: 90px;
-    height: 80px;
+    border: solid 1px grey;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
-    padding: 20px
+    margin: 3px
 }
 
 .footer {
